# awq-fast-dequant

./: .gitignore  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
awq_fast_dequant/: __init__.py  _build.py  autotune.py
awq_fast_dequant/kernels/: awq_dequant_v3.cu
cuda_kernel/: awq_dequantize_v2.cu  block_sweep.py  cuda_test.cu  cuda_test.py  custom_dequantize.cu  ncu_profile.py  smart_dequantize.py
day1_vllm_benchmark/: benchmark_results.json  benchmark_results_awq_marlin.json  gemm_benchmark.py  profiling.py  vllm_benchmark.py
examples/: basic_usage.py
tests/: auto_cache_test.py  correctness_test.py
