[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "awq-fast-dequant"
version = "0.1.0"
description = "Custom CUDA kernels for AWQ 4-bit dequantization with block-size autotuning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Siddharth Verma" }]
dependencies = [
    "torch>=2.4.0",
    "ninja",
]

[project.urls]
Repository = "https://github.com/sid-stack001/awq-fast-dequant"

[tool.setuptools.packages.find]
include = ["awq_fast_dequant*"]

[tool.setuptools.package-data]
awq_fast_dequant = ["kernels/*.cu"]